--- a/gen_predef.report.html
+++ b/gen_predef.report.html
@@ -1,7 +1,7 @@
 <html><head><title>gen_predef.y</title></head>
 <body bgcolor="white">
 <hr><pre>
-<b>Grammar and Diagnosis gen_predef.y - 21.06.2020 04:06:40</b>
+<b>Grammar and Diagnosis gen_predef.y - 24.06.2020 20:44:38</b>
 
 <a name="prod1">    1</a> $accept: program EOF
              ;
@@ -121,6 +121,9 @@
     Bool           reduce using <a href="#prod1">rule 1</a> ($accept)
     If             reduce using <a href="#prod1">rule 1</a> ($accept)
     While          reduce using <a href="#prod1">rule 1</a> ($accept)
+    LogicalOR      reduce using <a href="#prod1">rule 1</a> ($accept)
+    LogicalAND     reduce using <a href="#prod1">rule 1</a> ($accept)
+    LogicalNEG     reduce using <a href="#prod1">rule 1</a> ($accept)
 
 
 
